feat & fix: desarrollo del frontend e integración con autenticación JWT y API de YouTube
- Desarrollo completo del frontend (páginas de login, registro y panel principal con AdminLTE).
- Configuración de clave JWT fija (jwt.secret) en el backend desde variables de entorno.
- Definición de bean RestClient.Builder y configuración de CORS en SecurityConfig.
- Manejo de excepciones en YoutubeService y GlobalExceptionHandler para errores de API Key.
- Soporte para lectura de .env, Docker Compose y documentación del proyecto.