@@ -2,13 +2,14 @@ package com.tup.youtube_playlist_checker.security;
 
 import com.tup.youtube_playlist_checker.entity.Usuario;
 import com.tup.youtube_playlist_checker.repositories.UsuarioRepository;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -24,6 +25,6 @@ public class CustomUserDetailsService implements UserDetailsService {
         Usuario usuario = usuarioRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + email));
 
-        return new User(usuario.getEmail(), usuario.getPassword(), Collections.emptyList());
+        return new User(usuario.getEmail(), usuario.getPassword(), List.of(new SimpleGrantedAuthority("ROLE_USER")));
     }
 }
